--- a/pathplan.html
+++ b/pathplan.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datasets of Beihang ACT</title>
-    <link rel="icon" href="static/common/img/robot.png" type="image/x-icon">
+    <link rel="icon" href="static/common/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/common/css/styles.css">
     <link rel="stylesheet" href="static/common/css/lang.css">
     <link rel="stylesheet" href="static/common/css/video.css">
@@ -64,19 +64,59 @@
                 <p><strong data-key="task">相关任务：</strong><span data-key="task_value">机器人分类</span></p>
             </div>
         </div>
+
+
         <div class="section">
             <h2 data-key="dataset_info">数据集信息</h2>
-            <ul>
-                <li data-key="time">时间 (时间戳 ms)</li>
-                <li data-key="axle_moment">axle_moment: 机器人N轴的力矩 (NM)</li>
-                <li data-key="axle_position">axle_position: 机器人N轴的旋转位置 (°)</li>
-                <li data-key="axle_speed">axle_speed: 机器人N轴的角速度 (°/s)</li>
-            </ul>
+            <table>
+                <thead>
+                    <tr>
+                        <th data-key="table_key">键</th>
+                        <th data-key="table_dimension">维度</th>
+                        <th data-key="table_value">值</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>m_length</td>
+                        <td>(1)</td>
+                        <td data-key="m_length_dimension">不定长关节序列的实际长度</td>
+                    </tr>
+                    <tr>
+                        <td>solutions</td>
+                        <td>(300,7)</td>
+                        <td data-key="solutions_dimension">关节序列信息。第一维度是序列长度，第二维度是机器人关节数量。仅m_length之前的序列具备意义，m_length之后的序列以0填充</td>
+                    </tr>
+                    <tr>
+                        <td>sphere_centers</td>
+                        <td>(2,3)</td>
+                        <td data-key="sphere_centers_dimension">两个球体障碍物的中心位置(x,y,z)</td>
+                    </tr>
+                    <tr>
+                        <td>sphere_radiis</td>
+                        <td>(2)</td>
+                        <td data-key="sphere_radiis_dimension">两个球体障碍物的半径,取值范围为(0.1,0.2)。让对应的值为0时意味着不存在该障碍物，为默认填充</td>
+                    </tr>
+                    <tr>
+                        <td>cube_centers</td>
+                        <td>(2,3)</td>
+                        <td data-key="cube_centers_dimension">两个正方体障碍物的中心位置(x,y,z)</td>
+                    </tr>
+                    <tr>
+                        <td>cube_sizes</td>
+                        <td>(2)</td>
+                        <td data-key="cube_sizes_dimension">两个球体障碍物的半径,取值范围为(0.1,0.2)。让对应的值为0时意味着不存在该障碍物，为默认填充</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+
+
         <div class="section download">
             <h2 data-key="download">数据下载</h2>
             <p data-key="size">数据集大小：20GB</p>
-            <p><a href="https://bhpan.buaa.edu.cn/link/AA0BA5388669C84E5EB7BB830C313CF871" data-key="download_link"
+            <p data-key="format">存储格式：hdf5</p>
+            <p><a href="https://github.com/ACRoboT-buaa/RobotDiffuse/tree/main" data-key="download_link"
                     target="_blank">点击下载数据集</a></p>
         </div>
         <div class="section">
@@ -96,11 +136,13 @@
             <h2 data-key="citation">引用</h2>
             <div class="citation-content">
                 <pre id="citation-text">
-@misc{
-    title=<span data-key="title">日常采集数据集</span>}, 
-    url={https://datasets.act.buaa.edu.cn/}, 
-    author={北航ACT实验室}, year={2024} 
-}</pre>
+        @article{
+          zhang2024robotdiffuse,
+          title={RobotDiffuse: Motion Planning for Redundant Manipulator based on Diffusion Model},
+          author={Zhang, Xiaohan and Mou, Xudong and Wang, Rui and Wo, Tianyu and Gu, Ningbo and Wang, Tiejun and Xu, Cangbai and Liu, Xudong},
+          journal={arXiv preprint arXiv:2412.19500},
+          year={2024}
+        }</pre>
             </div>
         </div>
     </div>
