更改页面内容

--- a/pathplan.html
+++ b/pathplan.html
@@ -116,6 +116,7 @@
             <h2 data-key="download">数据下载</h2>
             <p data-key="size">数据集大小：20GB</p>
             <p data-key="format">存储格式：hdf5</p>
+            <p data-key="robot_model">机器人型号：Robot-obtalcles-panda (ROP)</p>
             <p><a href="https://github.com/ACRoboT-buaa/RobotDiffuse/tree/main" data-key="download_link"
                     target="_blank">点击下载数据集</a></p>
         </div>
