添加页面内容

--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
                         <li data-key="more-pathplan" onclick="window.location.href = './pathplan.html';">
                             轨迹规划
                         </li>
-                        <li data-key="more-reposity"
-                            onclick="window.location.href = 'https://github.com/ACRoboT-buaa/ACTDatasets.github.io';">仓库
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -90,8 +87,8 @@
         <div class="section download">
             <h2 data-key="download">数据下载</h2>
             <p data-key="size">数据集大小：20GB</p>
-            <p><a href="https://bhpan.buaa.edu.cn/link/AA0BA5388669C84E5EB7BB830C313CF871" data-key="download_link"
-                    target="_blank">点击下载数据集</a></p>
+            <!-- <p><a href="https://bhpan.buaa.edu.cn/link/AA0BA5388669C84E5EB7BB830C313CF871" data-key="download_link"
+                    target="_blank"> -->    点击下载数据集</a></p>
         </div>
         <div class="section">
             <h2 data-key="videos">示例视频</h2>
@@ -117,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="section citation">
+        <!-- <div class="section citation">
             <button data-key="copy_button" class="copy-btn" id="copy-btn" onclick="copyCitation()">复制</button>
             <h2 data-key="citation">引用</h2>
             <div class="citation-content">
@@ -130,7 +127,7 @@
           year={2024}
         }</pre>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <footer class="footer">
